# better-project-maintenance

./: README.md  get_ast.py  setup.cfg
.solution/: validation_test.py
solution/: validation_test.py
src/myproject/: __init__.py
src/myproject/models/: chat.py  message.py  user.py
tests/: myproject_test.py
