[metadata]
name = myproject
version = 0.1.0
description = Demo code for the talk "Better project maintenance with static analysis".
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tusharsadhwani/better-project-maintenance
author = Tushar Sadhwani
author_email = tushar.sadhwani000@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed

[options]
packages = find:
install_requires =
    fastapi
    uvicorn[standard]
python_requires = >=3.7
package_dir = =src

[options.packages.find]
where = ./src

[options.extras_require]
dev =
    black
    pytest
